--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,7 +20,7 @@ const structuredData = {
 
 <html lang='en' class='scroll-smooth'>
 	<head>
-		<script type='application/ld+json' set:html={JSON.stringify(structuredData)} />
+		<!-- <script type='application/ld+json' set:html={JSON.stringify(structuredData)} /> -->
 
 		<BaseHead title={title} description={description} ogImage={image} articleDate={articleDate} />
 		<ProviderTheme />
