--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -13,14 +13,14 @@ type Props = {
 	data: CollectionEntry<'blog'>['data']
 	headings: MarkdownHeading[]
 	readTime: string
-	slug: string
+	slug: string,
+  author: any
 }
 
-const { data, readTime, headings, id, slug } = Astro.props
+const { data, readTime, headings, id, slug, author } = Astro.props
 const { title, description, pubDate, heroImage, tags } = data
 
 const articleDate = pubDate.toISOString()
-const author = 'greg'
 ---
 
 <script
@@ -45,8 +45,8 @@ const author = 'greg'
 		author: {
 			'@type': 'Person',
 			name: author
-			// description: author.bio,
-			// url: author.profileUrl
+			// description: author?.bio,
+			// url: author?.profileUrl
 		}
 	})}
 />
@@ -57,6 +57,7 @@ const author = 'greg'
 	image={heroImage || '/public/open-graph.png'}
 	articleDate={articleDate}
 >
+{author}
 	<article class='min-w-full md:py-4 sm:max-w-none md:max-w-none'>
 		<header class='mb-3 flex flex-col justify-center items-center gap-6'>
 			<div class='flex flex-col gap-2'>
@@ -74,7 +75,7 @@ const author = 'greg'
 			</div>
 
 			<div class='flex flex-wrap justify-center items-center gap-2 gap-y-4 md:gap-5'>
-				{tags.map((tag) => <Tag tag={tag} />)}
+				{tags?.map((tag) => <Tag tag={tag} />)}
 			</div>
 		</header>
 
@@ -82,12 +83,9 @@ const author = 'greg'
 			{
 				heroImage && (
 					<img
-						src={cover_image || '/public/open-graph.png'}
+						src={'/public/open-graph.png'}
 						width={1000}
 						height={500}
-						quality={100}
-						format='jpg'
-						loading='eager'
 						class='rounded-md w-full max-h-[300px]  md:max-h-[500px] my-8 object-cover'
 						alt={`img of ${title}`}
 					/>
