--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -44,9 +44,9 @@ const articleDate = pubDate.toISOString()
 		},
 		author: {
 			'@type': 'Person',
-			name: author?.name,
+			name: author?.name || "greg",
 			// description: author?.bio,
-			url: author?.url
+			url: author?.url || "jswhisperer.uk"
 		}
 	})}
 />
