--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -47,7 +47,7 @@
 								>
 							</li>
 							<li>
-								<a href='mailto:hello@jswhisperer.uk' target="_blank"
+								<a href='mailto:hello@jswhisperer.uk' target='_blank'
 									><span aria-hidden='true' class='icon-really-old-telephone'></span>
 									 Contact</a
 								>
@@ -194,6 +194,7 @@
 		font-family: gregasaurus;
 		font-style: normal;
 		speak: none;
+		font-display: swap;
 	}
 	.icon-pipe:before {
 		content: '\0025';
@@ -670,6 +671,7 @@
 			url(/public/fonts/gregasaurus.ttf) format('truetype');
 		font-weight: 400;
 		font-style: normal;
+		font-display: swap;
 	}
 	@font-face {
 		font-family: MuncieRegular;
@@ -681,6 +683,7 @@
 			url(/public/fonts/muncie-webfont.svg) format('svg');
 		font-weight: 400;
 		font-style: normal;
+		font-display: swap;
 	}
 	nav.ribbon > .inside {
 		height: 52px;
