--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -45,6 +45,7 @@ const disqusEnabled = disqusConfig.enabled
 	data={post.data}
 	headings={headings}
 	readTime={remarkPluginFrontmatter.minutesRead}
+	author={post.author}
 >
 	{post.author?.name} hi
 	<div class='grid grid-cols-1 md:grid-cols-[20%_auto] gap-10 mt-8'>
