--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -17,7 +17,7 @@
 					<div class='inside'>
 						<ul class='navigation'>
 							<li>
-								<a href='#about'
+								<a href='/about'
 									><span aria-hidden='true' class='icon-tux'></span>
 									 About</a
 								>
@@ -35,19 +35,19 @@
 								>
 							</li>
 							<li>
-								<a href='#philosophy'
+								<a href='/philosophy'
 									><span aria-hidden='true' class='icon-old-chair'></span>
 									 Philosophy</a
 								>
 							</li>
 							<li>
-								<a href='#' title='Blog coming soon!'
+								<a href='/' title='Blog'
 									><span aria-hidden='true' class='icon-pipe'></span>
 									 Blog</a
 								>
 							</li>
 							<li>
-								<a href='mailto:hello@jswhisperer.uk' target='_blank'
+								<a href='/contact'
 									><span aria-hidden='true' class='icon-really-old-telephone'></span>
 									 Contact</a
 								>
