--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,7 +1,7 @@
 ---
 import { siteConfig } from '@/site-config'
-import '../styles/global.css'
 import { ViewTransitions } from 'astro:transitions'
+import '../styles/global.css'
 
 export interface Props {
 	title: string
@@ -18,14 +18,14 @@ const titleSeparator = '•'
 
 const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`
 
-import { join } from 'path'
 import { AstroFont } from 'astro-font'
+import { join } from 'path'
 ---
 
 <!-- Global Metadata -->
 <meta charset='utf-8' />
 <meta name='viewport' content='width=device-width,initial-scale=1' />
-<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+<link rel='icon' type='image/svg+xml' href='/public/favicon.ico' />
 <meta name='generator' content={Astro.generator} />
 
 <!-- Canonical URL -->
