--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -58,7 +58,7 @@ const disqusEnabled = disqusConfig.enabled
 		</aside>
 
 		<!-- post -->
-		<article class='max-w-full w-full'>
+		<article class='card max-w-full w-full'>
 			<div class='prose prose-lg md:prose-xl dark:prose-invert mb-12 min-w-full'>
 				<Content components={{ pre: Code, SButton }} />
 			</div>
