--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,3 +38,26 @@
 .shadow {
 	box-shadow: -5px 3px 8px 1px rgba(0, 0, 0, 0.12);
 }
+
+.card {
+  /*! CSS Used from: https://gregbenner-classic-2009.netlify.app/stylesheets/mini.min.crush.css */
+div{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;text-shadow:1px 1px 5px #FFF;}
+*{position:relative;}
+.container .insidecolumn{border:solid 1px #CCC;-webkit-border-radius:10px 2px 10px 2px;-moz-border-radius:10px 2px 10px 2px;border-radius:10px 2px 10px 2px;background:rgb(255,255,255);background:rgba(255,255,255,.2);padding:10px 15px;-webkit-box-shadow:inset 0 1px 2px 0 rgba(0,0,0,.1);-moz-box-shadow:inset 0 1px 2px 0 rgba(0,0,0,.1);box-shadow:inset 0 1px 2px 0 rgba(0,0,0,.1);}
+@media only screen and (max-width: 479px){
+.container .insidecolumn{padding-top:10px;}
+}
+
+}
+.card {
+    border: solid 1px #CCC;
+    -webkit-border-radius: 10px 2px 10px 2px;
+    -moz-border-radius: 10px 2px 10px 2px;
+    border-radius: 10px 2px 10px 2px;
+    background: rgb(255, 255, 255);
+    background: rgba(255, 255, 255, .2);
+    padding: 10px 15px;
+    -webkit-box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, .1);
+    -moz-box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, .1);
+    box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, .1);
+}
