--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,8 +40,8 @@
 }
 
 .card {
-  /*! CSS Used from: https://gregbenner-classic-2009.netlify.app/stylesheets/mini.min.crush.css */
-div{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;text-shadow:1px 1px 5px #FFF;}
+
+div { margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;text-shadow:1px 1px 5px #FFF;}
 *{position:relative;}
 .container .insidecolumn{border:solid 1px #CCC;-webkit-border-radius:10px 2px 10px 2px;-moz-border-radius:10px 2px 10px 2px;border-radius:10px 2px 10px 2px;background:rgb(255,255,255);background:rgba(255,255,255,.2);padding:10px 15px;-webkit-box-shadow:inset 0 1px 2px 0 rgba(0,0,0,.1);-moz-box-shadow:inset 0 1px 2px 0 rgba(0,0,0,.1);box-shadow:inset 0 1px 2px 0 rgba(0,0,0,.1);}
 @media only screen and (max-width: 479px){
@@ -51,13 +51,24 @@ div{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:basel
 }
 .card {
     border: solid 1px #CCC;
-    -webkit-border-radius: 10px 2px 10px 2px;
-    -moz-border-radius: 10px 2px 10px 2px;
-    border-radius: 10px 2px 10px 2px;
+    border-radius: 10px;
     background: rgb(255, 255, 255);
     background: rgba(255, 255, 255, .2);
     padding: 10px 15px;
-    -webkit-box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, .1);
-    -moz-box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, .1);
     box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, .1);
+    overflow: hidden;
+    position: relative;
 }
+
+	/* .main-content-shadow {
+		display: block;
+		width: 100%;
+		height: 50px;
+		border-top: 1px solid #f8f7f5;
+		background: linear-gradient(180deg, rgba(165, 157, 139, 0.3) 0%, rgba(165, 157, 139, 0) 100%);
+    position: absolute;
+    top: 0;
+    left: 0;
+	} */
+
+@import "./prism.css"
