--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -70,5 +70,7 @@ div { margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:bas
     top: 0;
     left: 0;
 	} */
-
+.card code {
+    text-shadow: none;
+}
 @import "./prism.css"
