--- a/src/pages/author/[...author].astro
+++ b/src/pages/author/[...author].astro
@@ -1,6 +1,7 @@
 ---
 import BaseLayout from '@/layouts/BaseLayout'
 import { getCollection, type CollectionEntry } from 'astro:content'
+import { Image } from 'astro:assets'
 
 const authors = await getCollection('author')
 
@@ -11,8 +12,6 @@ export async function getStaticPaths() {
 	// const disqusEnabled = disqusConfig.enabled authors = Object.values(import.meta.glob('../author/*.md', { eager: true }))
 
 	return authors.map((author: any) => {
-		console.log(author)
-
 		return {
 			params: { author: author.data.name },
 			props: { author }
@@ -25,9 +24,15 @@ type Props = CollectionEntry<'author'> & { name: string; author: any }
 //const name = Astro.params
 const { author } = Astro.props
 
-console.log({ author })
+console.table(author.data.avatar)
 ---
 
 <BaseLayout title='Author'>
-	{author.data.name}
+	<div key={'index'}>
+		<h1>{author.data.name}</h1>
+		<p>{author.data.bio}</p>
+		<p>{author.data.url}</p>
+		<p>{author.data.avatar.src}</p>
+		<Image alt='x' src={author.data.avatar} />
+	</div>
 </BaseLayout>
