--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -86,7 +86,7 @@ const articleDate = pubDate.toISOString()
 		<>
 			{
 				heroImage && (
-					<img
+					<Image
 						src={'/public/open-graph.png'}
 						width={1000}
 						height={500}
