--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -49,7 +49,7 @@ const disqusEnabled = disqusConfig.enabled
 	readTime={remarkPluginFrontmatter.minutesRead}
 	author={post.author}
 >
-	{post.author?.name} hi
+	{post.author?.name}
 	<div class='grid grid-cols-1 md:grid-cols-[20%_auto] gap-10 mt-8'>
 		<!-- aside  -->
 		<aside class='md:flex flex-col gap-8 hidden'>
