--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -23,7 +23,7 @@ const { data, readTime, headings, id, slug } = Astro.props
 const { title, description, pubDate, heroImage, tags, author } = data
 const authors = await getCollection('author')
 
-const currentAuthor = authors.find((a) => a.name === author.name)
+const currentAuthor = authors.find((a) => a.name === author?.name)
 
 const articleDate = pubDate.toISOString()
 ---
@@ -42,7 +42,7 @@ const articleDate = pubDate.toISOString()
 		thumbnailUrl: heroImage || '/public/open-graph.png',
 		image: {
 			'@type': 'ImageObject',
-			url: heroImage?.src || '/public/open-graph.png',
+			url: heroImage?.src,
 			width: heroImage?.width,
 			height: heroImage?.height
 			// caption: heroImage.alt
@@ -87,10 +87,10 @@ const articleDate = pubDate.toISOString()
 			{
 				heroImage && (
 					<Image
-						src={'/public/open-graph.png'}
+						src={heroImage}
 						width={1000}
 						height={500}
-						class='rounded-md w-full max-h-[300px]  md:max-h-[500px] my-8 object-cover'
+						class='rounded-md w-full max-h-[300px] border-4 md:border-t-4  md:max-h-[500px] my-8 object-cover border-white-900'
 						alt={`img of ${title}`}
 					/>
 				)
