--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,13 +5,14 @@ import Search from '@/components/Search'
 import TagIcon from './icons/TagIcon.astro'
 import ToggleTheme from './ToggleTheme.astro'
 import { SOCIALNETWORKS } from '@/data/links'
+// import { Umami } from 'astro-analytics';
 ---
 
+<!-- <Umami id="5d86b231-4cb5-49e5-8d7a-707e3f5ba0c7" src="https://cloud.umami.is/script.js" defer /> --><!--
 <script
 	defer
 	src='https://cloud.umami.is/script.js'
-	data-website-id='5d86b231-4cb5-49e5-8d7a-707e3f5ba0c7'></script>
-
+	data-website-id='5d86b231-4cb5-49e5-8d7a-707e3f5ba0c7'></script> -->
 <header class='topheader relative flex items-center h-12 font-semibold'>
 	<a class='text-lg mr-auto' href='/'>Home</a>
 
