--- a/src/components/ListRelatedPosts.astro
+++ b/src/components/ListRelatedPosts.astro
@@ -18,14 +18,18 @@ const { posts } = Astro.props
 				return (
 					<div class='flex flex-wrap gap-2'>
 						<div class='min-h-full'>
-							{post.data.heroImage && <Image
-								src={post.data.heroImage}
-								width={200}
-								height={200}
-								format='webp'
-								class='w-16 h-16 object-cover rounded-full  '
-								alt={`img of ${post.data.title}`}
-							/>}
+							{post.data.heroImage && (
+								<Image
+									src={post.data.heroImage}
+									width={200}
+									height={200}
+									format='webp'
+									class='w-16 h-16 object-cover rounded-full  '
+									alt={`img of ${post.data.title}`}
+									decoding='async'
+									loading='lazy'
+								/>
+							)}
 						</div>
 						<header class='flex justify-center items-center'>
 							<a class='font-medium  hover:underline' href={`/post/${post.slug}/`}>
