--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -38,7 +38,7 @@ const structuredData = {
 		</main>
 		<TwSizeIndicator />
 		<EditBlog />
-		<style>
+		<style media='none' onload="if(media!='all')media='all'" loading='lazy'>
 			body {
 				margin-left: calc(100vw - 100%); /* prevent layout shift */
 			}
