--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -5,10 +5,10 @@
 			<div id='logo'>
 				<h1 class='title'>
 					<!-- G<span class="small-mobile-hide">REG</span> -->
-					 JavaScript
+					JavaScript
 					<span aria-hidden='true' class='icon-anchor-one small-mobile-hide' id='logoanchor'
 					></span><span class='small-mobile-only'>N</span>
-					 Whisperer
+					Whisperer
 					<!-- B<span class="small-mobile-hide">ENNER</span> -->
 				</h1>
 			</div>
@@ -19,37 +19,37 @@
 							<li>
 								<a href='/about'
 									><span aria-hidden='true' class='icon-tux'></span>
-									 About</a
+									About</a
 								>
 							</li>
 							<li>
 								<a href='/work'
 									><span aria-hidden='true' class='icon-cannon'></span>
-									 Work</a
+									Work</a
 								>
 							</li>
 							<li>
 								<a href='#skills'
 									><span aria-hidden='true' class='icon-glasses-one'></span>
-									 Skills</a
+									Skills</a
 								>
 							</li>
 							<li>
 								<a href='/philosophy'
 									><span aria-hidden='true' class='icon-old-chair'></span>
-									 Philosophy</a
+									Philosophy</a
 								>
 							</li>
 							<li>
 								<a href='/' title='Blog'
 									><span aria-hidden='true' class='icon-pipe'></span>
-									 Blog</a
+									Blog</a
 								>
 							</li>
 							<li>
 								<a href='/contact'
 									><span aria-hidden='true' class='icon-really-old-telephone'></span>
-									 Contact</a
+									Contact</a
 								>
 							</li>
 						</ul>
@@ -63,7 +63,7 @@
 </div>
 <span class='main-content-shadow'></span>
 
-<style>
+<style media='none' onload="if(media!='all')media='all'" loading='lazy'>
 	span {
 		margin: 0;
 		padding: 0;
@@ -533,7 +533,12 @@
 				rgba(0, 0, 0, 0) 97%,
 				rgba(0, 0, 0, 0.1) 100%
 			),
-			-webkit-linear-gradient(top, rgba(0, 0, 0, 0.1) 0, rgba(0, 0, 0, 0) 34%, rgba(0, 0, 0, 0) 100%);
+			-webkit-linear-gradient(
+					top,
+					rgba(0, 0, 0, 0.1) 0,
+					rgba(0, 0, 0, 0) 34%,
+					rgba(0, 0, 0, 0) 100%
+				);
 		background: -o-linear-gradient(
 			left,
 			rgba(0, 0, 0, 0.1) 0,
