--- a/src/components/ListRelatedPosts.astro
+++ b/src/components/ListRelatedPosts.astro
@@ -19,7 +19,7 @@ const { posts } = Astro.props
 					<div class='flex flex-wrap gap-2'>
 						<div class='min-h-full'>
 							{post.data.heroImage && (
-								<Image
+								<Picture
 									src={post.data.heroImage}
 									width={200}
 									height={200}
