--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,6 @@
 ---
-import BaseLayout from "@/layouts/BaseLayout";
+import BaseLayout from '@/layouts/BaseLayout'
+import { Picture } from 'astro:assets'
 ---
 
 <BaseLayout title='About'>
@@ -11,7 +12,7 @@ import BaseLayout from "@/layouts/BaseLayout";
 			About Greg Benner
 			<span aria-hidden='true' class='icon-tux'></span>
 		</h2>
-		 Ahoy, dear reader. <br />
+		Ahoy, dear reader. <br />
 		<p>
 			I started my life in a small town on the cusp of Toronto, Ontario in 1985. Upon completing
 			high school I moved into the big city where sights, sounds and tastes influenced me to start
