--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from '@/layouts/BaseLayout'
+import { Picture } from 'astro:assets'
 ---
 
 <BaseLayout title='Contact'>
@@ -12,7 +13,7 @@ import BaseLayout from '@/layouts/BaseLayout'
 			</h2>
 			<p>
 				Want to say hi, Need a quote?<br />
-				 Let's be friends.
+				Let's be friends.
 			</p>
 			<ul class='left alpha'>
 				<li>
@@ -23,14 +24,14 @@ import BaseLayout from '@/layouts/BaseLayout'
 				<li>
 					<a href='https://twitter.com/jswhisperer'
 						><span aria-hidden='true' class='icon-twitter'></span>
-						 Twitter</a
+						Twitter</a
 					>
 				</li>
 
 				<li>
 					<a href='https://github.com/jswhisperer'
 						><span aria-hidden='true' class='icon-github'></span>
-						 Github</a
+						Github</a
 					>
 				</li>
 			</ul>
@@ -38,7 +39,7 @@ import BaseLayout from '@/layouts/BaseLayout'
 				<li>
 					<a href='https://www.linkedin.com/in/jswhisperer/'
 						><span aria-hidden='true' class='icon-linkedin'></span>
-						 LinkedIn</a
+						LinkedIn</a
 					>
 				</li>
 				<!-- <li>
