--- a/src/components/ListRelatedPosts.astro
+++ b/src/components/ListRelatedPosts.astro
@@ -2,7 +2,7 @@
 import type { CollectionEntry } from 'astro:content'
 
 import { cn } from '@/utils'
-import { Image } from 'astro:assets'
+import { Image, Picture } from 'astro:assets'
 
 type Props = {
 	posts: CollectionEntry<'blog'>[]
