--- a/src/pages/author/[...author].astro
+++ b/src/pages/author/[...author].astro
@@ -1,7 +1,7 @@
 ---
 import BaseLayout from '@/layouts/BaseLayout'
 import { getCollection, type CollectionEntry } from 'astro:content'
-import { Image } from 'astro:assets'
+import { Image, Picture } from 'astro:assets'
 
 const authors = await getCollection('author')
 
