--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import TitlePage from '@/components/TitlePage'
 import BaseLayout from '@/layouts/BaseLayout'
 import { getPosts } from '@/utils'
 import { siteConfig } from '@/site-config'
+import { Picture } from 'astro:assets'
 
 const MAX_POSTS = 1005 // max number of posts to show on the home page
 const posts = await getPosts(MAX_POSTS)
