--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -2,6 +2,7 @@
 import BaseLayout from '@/layouts/BaseLayout'
 import TitlePage from '@/components/TitlePage'
 import { getTags } from '@/utils'
+import { Picture } from 'astro:assets'
 const tags = await getTags()
 ---
 
