--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -8,10 +8,10 @@ import BaseLayout from '@/layouts/BaseLayout'
 	window.addEventListener('DOMContentLoaded', (event) => {
 		console.log(head)
 		head.js(
-			'/js/jquery.min.js',
+			'../js/jquery.min.js',
 			//"javascripts/tabs.js",
-			'/js/responsiveslides.min.js',
-			'/js/jquery.smooth-scroll.min.js',
+			'../js/responsiveslides.min.js',
+			'../js/jquery.smooth-scroll.min.js',
 			function () {
 				$('.rslides').responsiveSlides({
 					auto: true,
