--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,7 +1,7 @@
 ---
 import { siteConfig } from '@/site-config'
 import { ViewTransitions } from 'astro:transitions'
-import '../styles/global.css'
+// import '../styles/global.css'
 
 export interface Props {
 	title: string
@@ -25,6 +25,7 @@ import { join } from 'path'
 <!-- Global Metadata -->
 <meta charset='utf-8' />
 <meta name='viewport' content='width=device-width, initial-scale=1' />
+<style is:global media='none' onload="if(media!='all') media='all'" loading='lazy'></style>
 
 <link rel='icon' href='/favicon.ico' />
 <meta name='generator' content={Astro.generator} />
