--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -667,24 +667,24 @@
 	} /*! CSS Used fontfaces */
 	@font-face {
 		font-family: gregasaurus;
-		src: url(/public/fonts/gregasaurus.eot);
+		src: url(/fonts/gregasaurus.eot);
 		src:
-			url(/public/fonts/gregasaurus.eot#iefix) format('embedded-opentype'),
-			url(/public/fonts/gregasaurus.svg) format('svg'),
-			url(/public/fonts/gregasaurus.woff) format('woff'),
-			url(/public/fonts/gregasaurus.ttf) format('truetype');
+			url(/fonts/gregasaurus.eot#iefix) format('embedded-opentype'),
+			url(/fonts/gregasaurus.svg) format('svg'),
+			url(/fonts/gregasaurus.woff) format('woff'),
+			url(/fonts/gregasaurus.ttf) format('truetype');
 		font-weight: 400;
 		font-style: normal;
 		font-display: swap;
 	}
 	@font-face {
 		font-family: MuncieRegular;
-		src: url(/public/fonts/muncie-webfont.eot);
+		src: url(/fonts/muncie-webfont.eot);
 		src:
-			url(/public/fonts/muncie-webfont.eot#iefix) format('embedded-opentype'),
-			url(/public/fonts/muncie-webfont.woff) format('woff'),
-			url(/public/fonts/muncie-webfont.ttf) format('truetype'),
-			url(/public/fonts/muncie-webfont.svg) format('svg');
+			url(/fonts/muncie-webfont.eot#iefix) format('embedded-opentype'),
+			url(/fonts/muncie-webfont.woff) format('woff'),
+			url(/fonts/muncie-webfont.ttf) format('truetype'),
+			url(/fonts/muncie-webfont.svg) format('svg');
 		font-weight: 400;
 		font-style: normal;
 		font-display: swap;
