--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -18,6 +18,8 @@ const titleSeparator = '•'
 
 const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`
 
+const username = 'jswhisperer'
+
 import { AstroFont } from 'astro-font'
 import { join } from 'path'
 ---
@@ -29,6 +31,20 @@ import { join } from 'path'
 
 <link rel='icon' href='/favicon.ico' />
 <meta name='generator' content={Astro.generator} />
+
+{
+	[
+		`https://github.com/${username}`,
+		`https://github.com/${username}`,
+		`https://www.linkedin.com/in/${username}`,
+		`https://bsky.app/profile/${username}.bsky.social`,
+		`https://www.linkedin.com/in/${username}`,
+		`https://dev.to/${username}`,
+		`https://x.com/${username}`,
+		`mailto:hello@${username}`,
+		`https://x.com/${username}`
+	].map((social) => <link rel='me' href={social} />)
+}
 
 <!-- Canonical URL -->
 <link rel='canonical' href={canonicalURL} />
