--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -63,7 +63,7 @@ const disqusEnabled = disqusConfig.enabled
 		<article class='card max-w-full w-full'>
 			<span class='main-content-shadow'></span>
 			<div class='prose prose-lg md:prose-xl dark:prose-invert mb-12 min-w-full'>
-				<Content components={{ Code, SButton, Picture }} />
+				<Content class='e-content' components={{ Code, SButton, Picture }} />
 
 				<!-- related posts -->
 				<footer>
