--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -62,103 +62,106 @@ const articleDate = pubDate.toISOString()
 	image={heroImage || '/public/open-graph.png'}
 	articleDate={articleDate}
 >
-	<article class='min-w-full md:py-4 sm:max-w-none md:max-w-none'>
+	<article class='h-entry min-w-full md:py-4 sm:max-w-none md:max-w-none'>
 		<header class='mb-3 flex flex-col justify-center items-center gap-6'>
 			<div class='flex flex-col gap-2'>
 				<div class='flex items-center justify-center gap-x-1'>
 					<p class='text-center text-sm text-opacity-50'>
 						Published <FormattedDate date={pubDate} />
+					</p> by <p>
+						Published by <a class='p-author h-card' href={currentAuthor.url}>{currentAuthor.name}</a
+						>
+						<p class='text-center text-sm text-opacity-50 font-bold'>
+							- {readTime}
+						</p>
 					</p>
-					<p class='text-center text-sm text-opacity-50 font-bold'>
-						- {readTime}
-					</p>
+					<h1 class='p-name text-center text-4xl md:text-6xl md:pb-2.5 font-semibold'>
+						{title}
+					</h1>
 				</div>
-				<h1 class='text-center text-4xl md:text-6xl md:pb-2.5 font-semibold'>
-					{title}
-				</h1>
+
+				<div class='flex flex-wrap justify-center items-center gap-2 gap-y-4 md:gap-5'>
+					{tags?.map((tag) => <Tag tag={tag} />)}
+				</div>
 			</div>
 
-			<div class='flex flex-wrap justify-center items-center gap-2 gap-y-4 md:gap-5'>
-				{tags?.map((tag) => <Tag tag={tag} />)}
-			</div>
-		</header>
-
-		<>
-			{
-				heroImage && (
-					<Picture
-						src={heroImage}
-						width={1000}
-						height={500}
-						class='rounded-md w-full max-h-[300px] border-4 md:border-t-4  md:max-h-[500px] my-8 object-cover border-white-900'
-						alt={`img of ${title}`}
-						decoding='async'
-						loading='lazy'
-						formats={['avif', 'webp']}
-					/>
-				)
-			}
-		</>
-
-		<hr />
-
-		<div>
-			<slot />
-		</div>
-	</article>
-</BaseLayout>
-
-<script>
-	import { Image, Picture } from 'astro:assets'
-
-	const fnObserver = () => {
-		function handleIntersection(
-			entries: IntersectionObserverEntry[],
-			observer: IntersectionObserver
-		) {
-			entries.forEach((entry) => {
-				const index = document.querySelector(`aside a[href="#${entry.target.id}"]`)
-
-				if (entry.isIntersecting) {
-					index?.classList.remove('bg-slate-200', 'dark:bg-slate-800') // remove bg
-					index?.classList.add(
-						'bg-indigo-600',
-						'dark:bg-indigo-700',
-						'text-white',
-						'font-bold',
-						'transition-colors',
-						'duration-200'
-					)
-				} else {
-					index?.classList.add('bg-slate-200', 'dark:bg-slate-800') // add bg
-					index?.classList.remove(
-						'bg-indigo-600',
-						'dark:bg-indigo-700',
-						'text-white',
-						'font-bold',
-						'transition-colors',
-						'duration-200'
+			<>
+				{
+					heroImage && (
+						<Picture
+							src={heroImage}
+							width={1000}
+							height={500}
+							class='rounded-md w-full max-h-[300px] border-4 md:border-t-4  md:max-h-[500px] my-8 object-cover border-white-900'
+							alt={`img of ${title}`}
+							decoding='async'
+							loading='lazy'
+							formats={['avif', 'webp']}
+						/>
 					)
 				}
+			</>
+
+			<hr />
+
+			<div>
+				<slot />
+			</div>
+		</header>
+	</article>
+
+	<script>
+		import { Image, Picture } from 'astro:assets'
+
+		const fnObserver = () => {
+			function handleIntersection(
+				entries: IntersectionObserverEntry[],
+				observer: IntersectionObserver
+			) {
+				entries.forEach((entry) => {
+					const index = document.querySelector(`aside a[href="#${entry.target.id}"]`)
+
+					if (entry.isIntersecting) {
+						index?.classList.remove('bg-slate-200', 'dark:bg-slate-800') // remove bg
+						index?.classList.add(
+							'bg-indigo-600',
+							'dark:bg-indigo-700',
+							'text-white',
+							'font-bold',
+							'transition-colors',
+							'duration-200'
+						)
+					} else {
+						index?.classList.add('bg-slate-200', 'dark:bg-slate-800') // add bg
+						index?.classList.remove(
+							'bg-indigo-600',
+							'dark:bg-indigo-700',
+							'text-white',
+							'font-bold',
+							'transition-colors',
+							'duration-200'
+						)
+					}
+				})
+			}
+
+			const headings = document.querySelectorAll(
+				'div.prose h1, div.prose h2, div.prose h3, div.prose h4, div.prose h5, div.prose h6'
+			)
+
+			const options = {
+				root: null,
+				rootMargin: ' 15% 0px 0% 0px ',
+				threshold: 1
+			}
+
+			const observer = new IntersectionObserver(handleIntersection, options)
+
+			headings.forEach((heading) => {
+				observer.observe(heading)
 			})
 		}
-
-		const headings = document.querySelectorAll(
-			'div.prose h1, div.prose h2, div.prose h3, div.prose h4, div.prose h5, div.prose h6'
-		)
-
-		const options = {
-			root: null,
-			rootMargin: ' 15% 0px 0% 0px ',
-			threshold: 1
-		}
-
-		const observer = new IntersectionObserver(handleIntersection, options)
-
-		headings.forEach((heading) => {
-			observer.observe(heading)
-		})
-	}
-	fnObserver()
-	document.addEventListener('astro:after-swap', fnObserver)
-</script>
+		fnObserver()
+		document.addEventListener('astro:after-swap', fnObserver)
+	</script>
+</BaseLayout>
