--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ const MAX_POSTS = 1005 // max number of posts to show on the home page
 const posts = await getPosts(MAX_POSTS)
 ---
 
-<div class='h-card' style-='display: none;'>
+<div class='h-card' style='display: none;'>
 	<a class='p-name u-url' href='https://jswhisperer.uk/'>Gregory Benner</a>
 	(<a class='p-org h-card' href='https:/jswhisperer.uk/'>jswhisperer</a>)
 </div>
