--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,9 @@ const posts = await getPosts(MAX_POSTS)
 ---
 
 <div class='h-card' style='display: none;'>
-	<a class='p-name u-url' href='https://jswhisperer.uk/'>Gregory Benner</a>
+	<a class='p-name u-url' href=`${Astro.site}/author/greg}`>Gregory Benner</a>
+
+	<img class='u-photo' src='https://jswhisperer.uk/greg.jpg' alt='Gregory Benner' />
 	(<a class='p-org h-card' href='https:/jswhisperer.uk/'>jswhisperer</a>)
 </div>
 
