--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -20,7 +20,7 @@ type Props = {
 }
 
 const { data, readTime, headings, id, slug } = Astro.props
-const { title, description, pubDate, heroImage, tags, author } = data
+const { title, description, pubDate, heroImage, tags, author, category } = data
 const authors = await getCollection('author')
 
 const currentAuthor = authors.find((a) => a.name === author?.name)
@@ -64,6 +64,8 @@ const articleDate = pubDate.toISOString()
 >
 	<article class='h-entry min-w-full md:py-4 sm:max-w-none md:max-w-none'>
 		<header class='mb-3 flex flex-col justify-center items-center gap-6'>
+			<a class='u-url' href={pageUrl}></a>
+
 			<div class='flex flex-col gap-2'>
 				<div class='flex items-center justify-center gap-x-1'>
 					<p class='text-center text-sm text-opacity-50'>
