--- a/src/pages/post/[...slug].astro
+++ b/src/pages/post/[...slug].astro
@@ -62,8 +62,10 @@ const disqusEnabled = disqusConfig.enabled
 		<!-- post -->
 		<article class='card max-w-full w-full'>
 			<span class='main-content-shadow'></span>
-			<div class='prose prose-lg md:prose-xl dark:prose-invert mb-12 min-w-full'>
-				<Content class='e-content' components={{ Code, SButton, Picture }} />
+			<div class='e-content prose prose-lg md:prose-xl dark:prose-invert mb-12 min-w-full'>
+				<a class='u-url' href='…'>…</a>
+
+				<Content components={{ Code, SButton, Picture }} />
 
 				<!-- related posts -->
 				<footer>
