--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,18 +11,18 @@ const MAX_POSTS = 1005 // max number of posts to show on the home page
 const posts = await getPosts(MAX_POSTS)
 ---
 
-<div class='h-card' style='display: none;'>
-	<a class='p-name u-url' href=`${Astro.site}/author/greg}`>Gregory Benner</a>
+<div class='p-author h-card' style='display: none;'>
+	<a rel='author' class='p-name u-url' href=`${Astro.site}/author/greg`>Gregory Benner</a>
 
 	<img class='u-photo' src='https://jswhisperer.uk/greg.jpeg' alt='Gregory Benner' />
-	(<a class='p-org h-card' href='https:/jswhisperer.uk/'>jswhisperer</a>)
+	<a class='p-org h-card' href='https:/jswhisperer.uk/'>jswhisperer</a>
 </div>
 
 <BaseLayout title='Home'>
 	<TitlePage title={siteConfig.title} />
 	<ListCategories />
 
-	<div>
+	<div class='h-feed'>
 		<h2 class='text-lg font-medium tracking-wide text-end'>Latest Posts</h2>
 		<ListPosts FirstBig={true} posts={posts} />
 	</div>
