--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -31,7 +31,7 @@ import { join } from 'path'
 
 <link rel='icon' href='/favicon.ico' />
 <meta name='generator' content={Astro.generator} />
-
+<link rel='webmention' href='https://webmention.io/jswhisperer.uk/webmention' />
 {
 	[
 		`https://github.com/${username}`,
