--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -22,7 +22,7 @@ var date_format_str =
 	':00'
 ---
 
-<time class='text-sm font-bold text-opacity-60' datetime={date_format_str}>
+<time class='dt-published text-sm font-bold text-opacity-60' datetime={date_format_str}>
 	{
 		date.toLocaleDateString('en-us', {
 			year: 'numeric',
